网络状态回调重构

--- a/module_common/src/main/res/layout/activity_base_list.xml
+++ b/module_common/src/main/res/layout/activity_base_list.xml
@@ -8,8 +8,14 @@
     android:orientation="vertical"
     tools:context=".base.BaseListActivity">
 
-    <include layout="@layout/merge_toolbar" />
+    <!--<include layout="@layout/merge_toolbar" />-->
 
-    <include layout="@layout/layout_common_list" />
+    <!--<include layout="@layout/layout_common_list" />-->
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
