--- a/module_common/src/main/res/layout/merge_toolbar.xml
+++ b/module_common/src/main/res/layout/merge_toolbar.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:showDividers="end"
-        app:elevation="0dp">
+    <!--<android.support.design.widget.AppBarLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:showDividers="end"-->
+        <!--app:elevation="0dp">-->
 
         <android.support.v7.widget.Toolbar
             android:id="@id/toolbar"
@@ -28,6 +28,6 @@
 
         </android.support.v7.widget.Toolbar>
 
-    </android.support.design.widget.AppBarLayout>
+    <!--</android.support.design.widget.AppBarLayout>-->
 
 </merge>
