--- a/module_common/src/main/res/layout/activity_base_list.xml
+++ b/module_common/src/main/res/layout/activity_base_list.xml
@@ -1,21 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ll_activity"
+    android:id="@id/recyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:orientation="vertical"
-    tools:context=".base.BaseListActivity">
-
-    <!--<include layout="@layout/merge_toolbar" />-->
-
-    <!--<include layout="@layout/layout_common_list" />-->
-
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-</LinearLayout>
+    tools:context=".base.BaseListActivity" />
