--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:jp="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tool:context=".MainActivity">
 
-    <com.jpeng.jptabbar.JPTabBar
-        android:id="@+id/main_gts_tabs"
+    <Button
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/bg_gradienttabstrip_tab"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        jp:TabAnimate="None"
-        jp:TabMargin="4dp"
-        jp:TabIconSize="22dp"
-        jp:TabGradientEnable="false"
-        jp:TabMiddleBottomDis="10dp"
-        jp:TabMiddleHMargin="50dp"
-        jp:TabMiddleView="@layout/view_mitem"
-        jp:TabNormalColor="#FF999999"
-        jp:TabSelectColor="#FF00dac9"
-        jp:TabTextSize="12sp" />
+        android:layout_height="wrap_content"
+        android:onClick="pagingLoad"
+        android:text="分页加载" />
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/main_viewpager"
+    <Button
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/main_gts_tabs" />
+        android:layout_height="wrap_content"
+        android:onClick="pagingLoadError"
+        android:text="加载出错" />
 
-</RelativeLayout>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="pagingLoadEmpty"
+        android:text="加载为空" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="pagingLoadCustom"
+        android:text="自定义状态布局" />
+
+</LinearLayout>
