--- a/module_common/src/main/res/values/themes.xml
+++ b/module_common/src/main/res/values/themes.xml
@@ -22,4 +22,11 @@
 
     <style name="AppTheme" parent="BaseTheme" />
 
+    <style name="WelcomeTheme" parent="AppTheme">
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowBackground">@drawable/bg_welcome</item>
+        <item name="android:navigationBarColor" tools:targetApi="lollipop">@color/transparent</item>
+    </style>
+
 </resources>
